# math_lib

./: CMakeLists.txt  CMakeLists.txt~  README.md  conanfile.py
include/lms/math/: convert.h  curve.h  interpolation.h  lookup_table.h  math.h  mathEigen.h  point_cloud.h  polyline.h  pose.h  vertex.h
src/: curve.cpp  lookup_table_test.cpp  math.cpp
src/test/: convert.cpp  interpolation.cpp  lookup_table.cpp  polyline2f.cpp  vertex.cpp
